[package]
name = "hessra-cap-engine"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Capability engine for the Hessra authorization system"
repository = "https://github.com/Hessra-Labs/hessra-cap"
documentation = "https://docs.rs/hessra-cap-engine"
keywords = ["hessra", "capability", "authorization", "security", "engine"]
categories = ["authentication", "api-bindings"]

[dependencies]
hessra-token-core = { workspace = true }
hessra-cap-token = { workspace = true }
hessra-identity-token = { workspace = true }
hessra-context-token = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
