[package]
name = "hessra-cap-engine"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Capability engine for the Hessra authorization system"
repository = "https://github.com/Hessra-Labs/hessra-cap"
documentation = "https://docs.rs/hessra-cap-engine"
keywords = ["hessra", "capability", "authorization", "security", "engine"]
categories = ["authentication", "api-bindings"]

[dependencies]
hessra-token-core = { workspace = true }
hessra-cap-token = { workspace = true }
hessra-identity-token = { workspace = true }
hessra-context-token = { workspace = true }
hessra-cap-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
