[package]
name = "hessra-cap"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Jake Valentic <jake@hessra.net>"]
description = "Hessra capability engine with default policy backend"
repository = "https://github.com/Hessra-Labs/hessra-cap"
documentation = "https://docs.rs/hessra-cap"
keywords = ["hessra", "capability", "authorization", "security"]
categories = ["authentication"]

[dependencies]
hessra-cap-engine = { workspace = true }
hessra-cap-policy = { workspace = true }
hessra-cap-schema = { workspace = true }

[dev-dependencies]
hessra-cap-token = { workspace = true }
hessra-identity-token = { workspace = true }
hessra-token-core = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "webapp_auth"
path = "examples/webapp_auth.rs"

[[example]]
name = "agent_harness"
path = "examples/agent_harness.rs"
